--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
         </div>
         
         <footer>
-            <p>© 2025 小红蛋 保留所有权利。</p>
+            <p>© 2025一架南航的737MAX  保留所有权利。</p>
             <div class="social-links">
             </div>
             <a href="https://xiaohondan.github.io" class="external-link" target="_blank">访问官方主页</a>
